compile_errors.txt
Starting a Gradle Daemon, 3 busy and 4 stopped Daemons could not be reused, use --status for details
Daemon JVM discovery is an incubating feature.
> Task :clean
> Task :generateEffectiveLombokConfig FROM-CACHE
> Task :compileJava
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/LearningArchiveService.java:90: error: method toInstant in interface ChronoLocalDateTime<D> cannot be applied to given types;
                                return l.getLearnedAt().isBefore(cutoffDate);
                                                                          ^
  required: ZoneOffset
  found:    no arguments
  reason: actual and formal argument lists differ in length
  where D is a type-variable:
    D extends ChronoLocalDate declared in interface ChronoLocalDateTime
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeService.java:120: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setLearnedAt(new java.util.Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/SystemAuditService.java:53: error: cannot find symbol
        payload.put("timestamp", log.getTimestamp() != null ? log.getTimestamp().getTime() : System.currentTimeMillis());
                                                                                ^
  symbol:   method getTime()
  location: class LocalDateTime
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:132: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setCreatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:133: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setUpdatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:135: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setLastUsed(new Date());
                             ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:162: error: incompatible types: Date cannot be converted to LocalDateTime
                learning.setLastUsed(new Date());
                                     ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:185: error: incompatible types: Date cannot be converted to LocalDateTime
                learning.setUpdatedAt(new Date());
                                      ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:260: error: cannot find symbol
                    long diffInMillis = now.getTime() - learning.getLastUsed().getTime();
                                                                              ^
  symbol:   method getTime()
  location: class LocalDateTime
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:405: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setCreatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/KnowledgeSeederServiceEnhanced.java:406: error: incompatible types: Date cannot be converted to LocalDateTime
        learning.setUpdatedAt(new Date());
                              ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/SelfImprovementService.java:68: error: cannot find symbol
                .filter(entry -> entry.getLearnedAt() != null && entry.getLearnedAt().after(intervalAgoDate))
                                                                                     ^
  symbol:   method after(Date)
  location: class LocalDateTime
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/service/SelfImprovementService.java:110: error: incompatible types: Date cannot be converted to LocalDateTime
            learning.setLearnedAt(new java.util.Date());
                                  ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/admin/ProviderAdminService.java:415: error: incompatible types: Date cannot be converted to LocalDateTime
        logRecord.setTimestamp(new Date());
                               ^
/home/nazifarabbu/supremeai/src/main/java/com/supremeai/controller/LearningIngestController.java:110: error: incompatible types: Date cannot be converted to LocalDateTime
            pattern.setLearnedAt(LocalDateTime.now());
                                 ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
15 errors

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1m 26s
3 actionable tasks: 2 executed, 1 from cache
